--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "algoliasearch": "^4.14.2",
     "bootstrap": "^5.2.2",
     "next": "^12.3.1",
     "nextjs-breadcrumbs": "^1.1.9",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.6.4",
     "react-dom": "18.2.0",
+    "react-instantsearch-dom": "^6.38.0",
+    "react-router-dom": "^6.4.3",
+    "react-slick": "^0.29.0",
     "sass": "^1.55.0"
   },
   "devDependencies": {
