--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "ekl-client",
+  "name": "ekl-client_2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.2",
-    "next": "^12.3.1",
-    "nextjs-breadcrumbs": "^1.1.9",
+    "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.55.0"
-  },
-  "devDependencies": {
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "react-dom": "18.2.0"
   }
 }
