--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-alice-carousel": "^2.6.6",
     "react-dom": "18.2.0",
     "react-instantsearch-dom": "^6.38.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-slick": "^0.29.0",
     "sass": "^1.55.0"
