--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "next dev -p 8080",
     "build": "next build",
     "start": "next start -p 8080",
-    "lint": "next lint",
-    "export" : "next export"
+    "start:prod": "next start -p 80",
+    "export": "next build && next export"
   },
   "dependencies": {
     "algoliasearch": "^4.14.2",
