--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-slick": "^0.29.0",
+    "reactstrap": "^9.1.5",
     "sass": "^1.55.0"
   },
   "devDependencies": {
